@@ -8,8 +8,14 @@ postgresql-common (80) UNRELEASED; urgency=low
   * debian/init.d-functions: Check for 'postgresql.conf' instead of 'pgdata'
     in the test for a valid cluster configuration directory, since 'pgdata' is
     optional now.
+  * pg_createcluster: Do not create pgdata symlinks to the data directory in
+    /etc any more when configuring a >= 8.0 cluster. Use the data_directory
+    configuration option instead. (Part of #444689)
+  * t/020_create_sql_remove.t: Check that clusters still work when replacing
+    the data_directory setting with a pgdata symbolic link, and that
+    the data_directory setting trumps the symlink.
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 14 Oct 2007 22:50:40 +0200
+ -- Martin Pitt <mpitt@debian.org>  Mon, 15 Oct 2007 14:52:42 +0200
 
 postgresql-common (79) unstable; urgency=low
 
